Update test-runner.sh